framec_tests/language_specific/python/v3_systems/positive/nested_parent_forward_then_transition_exec.frm
@target python
# @run-expect: FORWARD:PARENT
# @run-expect: TRANSITION:

system S {
    machine:
        $A => $P {
            e() {
                # nested structure with inline separators
                if True:
                    => $^; x = 1
                    if x == 1:
                        -> $B()
            }
        }
        $B { }
        $P { }
}

